--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    // https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-dev
+	compile group: 'nz.ac.waikato.cms.weka', name: 'weka-dev', version: '3.9.2'
+    
 }
 
 // In this section you declare where to find the dependencies of your project
